--- a/TEMA3/Tema3LFC/Tema3LFC/Tema3LFC.vcxproj.filters
+++ b/TEMA3/Tema3LFC/Tema3LFC/Tema3LFC.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Grammar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PDAutomaton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PDAutomaton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
