--- a/TEMA3/Tema3LFC/Tema3LFC/Tema3LFC.vcxproj
+++ b/TEMA3/Tema3LFC/Tema3LFC/Tema3LFC.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Grammar.cpp" />
+    <ClCompile Include="PDAutomaton.cpp" />
     <ClCompile Include="Tema3LFC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Grammar.h" />
+    <ClInclude Include="PDAutomaton.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="grammars.txt" />
