Made formaPoloneza class functor

--- a/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj
+++ b/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="formaPoloneza.cpp" />
+    <ClCompile Include="formaPoloneza.h" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
