--- a/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj.filters
+++ b/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="formaPoloneza.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AFN.cpp">
+    <ClCompile Include="AFD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -34,7 +34,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AFN.h">
+    <ClInclude Include="AFD.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
