--- a/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj
+++ b/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AFD.cpp" />
+    <ClCompile Include="AFD2.cpp" />
     <ClCompile Include="AFN.cpp" />
     <ClCompile Include="formaPoloneza.cpp" />
     <ClCompile Include="formaPoloneza.h" />
