--- a/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj.filters
+++ b/TEMA2/Tema2LFC/Tema2LFC/Tema2LFC.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="regexes.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
